# Jellyfin-Storage-Manager

./: .dockerignore  .gitignore  Dockerfile  FEATURES.md  README.md  docker-compose.yml
Example/: episode_name.nfo  tvshow.nfo  website_testing.html
backend/: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile
backend/src/: config.rs  db.rs  jellyfin.rs  jobs.rs  main.rs  metrics_collector.rs  paths.rs  pools.rs  scanner.rs  system.rs  user_settings.rs
deploy/: truenas-compose.yml
docs/: advanced-theming.md  truenas-scale.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: AppHeader.tsx  JellyMoverShell.helpers.test.ts  JellyMoverShell.helpers.ts  JellyMoverShell.tsx  JobAnalyticsCharts.tsx  PoolUsageCharts.tsx  PrimaryNav.tsx  SetupWizard.test.tsx  SetupWizard.tsx  SortDropdown.tsx  SystemMetricsChart.tsx  TransferSpeedChart.tsx
frontend/src/components/settings/: SettingsContent.tsx  SettingsLayout.tsx  SettingsNavItem.tsx  SettingsSection.tsx  SettingsSidebar.tsx
frontend/src/components/settings/appearance/: ThemeCard.tsx  (+3 more)
frontend/src/hooks/: useJobsPolling.ts  useMetrics.ts
frontend/src/pages/: JobsPage.tsx  LibraryPage.tsx  SettingsPage.tsx  StatsPage.tsx
frontend/src/theme/: ThemeErrorBoundary.tsx  context.tsx  cssVariables.ts  index.ts  persistence.ts  registry.ts  types.ts
frontend/src/theme/themes/: dark.ts  jelly.ts  light.ts
frontend/src/utils/: debounce.ts  formatters.test.ts  formatters.ts
(+17 files in other folders)
