[package]
name = "jellymover-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.29", default-features = false, features = ["fs"] }
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
quick-xml = { version = "0.37", default-features = false, features = ["serialize"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.5"
url = "2"
